--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ SPRING_DATASOURCE_USERNAME=root
 SPRING_DATASOURCE_PASSWORD=yourpassword
 
 # CORS Configuration
-CORS_ALLOWED_ORIGINS=http://72.60.111.65:3000,https://your-domain.com
+CORS_ALLOWED_ORIGINS=http://72.60.111.65:3000,http://www.chatrav.qzz.io/
 CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
 CORS_ALLOWED_HEADERS=*
 
