--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,27 +1,30 @@
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
+    server_name chatrav.qzz.io www.chatrav.qzz.io;
 
-  root /usr/share/nginx/html;
-  index index.html;
+    root /usr/share/nginx/html;
+    index index.html;
 
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
+    # React frontend (SPA)
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 
-  location /api {
-    proxy_pass http://backend:8081;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+    # API backend (Spring Boot)
+    location /api {
+        proxy_pass http://backend:8081;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-  location /ws {
-    proxy_pass http://backend:8081;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-    proxy_set_header Host $host;
-  }
+    # WebSocket connections
+    location /ws {
+        proxy_pass http://backend:8081;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+    }
 }
