--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.show-sql=true
 jwt.secret=${JWT_SECRET:change-me-in-prod}
 
 # CORS Configuration (can be overridden by environment variables)
-cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost}
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost,http://72.60.111.65:3000}
 cors.allowed.methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
